# serper_tap

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  OPERATIONS.md  OPERATOR_ACCEPTANCE.md  PLAN_REPO_SLIM.md  PRODUCTION_READINESS_REPORT.md  PROOF_BLOCK.json  README.md  SPECIFICATION.md  dashboards.sql  deploy_and_validate.sh  deployment.yaml  first_run.sh  prefect-worker.service  production_validation.sh  production_validation_mac.sh  pyproject.toml  pytest.ini  validate_production_ready.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/: 01_provision_gce_vm.sh  02_setup_repo_on_vm.sh  03_run_migrations.sh  04_deploy_prefect.sh  05_setup_systemd_worker.sh  PASS_FAIL_MATRIX.md  QUICK_START.md  README.md  prefect-worker.service  rollback.sh
docs/: performance_analysis.md  production_readiness.md  quick_start.md
docs/decisions/: 0001-safe-parse-json.md  0002-adc-vs-keyfile.md
examples/: __init__.py
examples/flows/: __init__.py  test_batch.py
scripts/: monitor_job.py  performance_test.py  setup_test_job.py  test_error_handling.py  test_nested_parallelism.py  test_parallel_jobs.py  test_real_api.py  validate_real_api.py
scripts/dev/: __init__.py  performance_test.py  setup_test_job.py  test_error_unit.py  test_parallel_jobs.py  test_real_api.py  validate_real_api.py  validate_reference_data.py
scripts/lib/: validation_helpers.sh
scripts/ops/: __init__.py  check_job_progress.py  clear_running_jobs.py  dry_run_repo_slim.sh  monitor_job.py
sql/: schema.sql
sql/migrations/: 001_add_batch_size_column.sql  002_payload_hardening.sql
src/: __init__.py  cli.py
src/flows/: __init__.py  create_job.py  process_batches.py  test_batch.py
src/models/: __init__.py  schemas.py
src/operations/: __init__.py  bigquery_ops.py  job_ops.py  place_ops.py  query_ops.py
src/tasks/: __init__.py  bigquery_tasks.py  serper_tasks.py
src/utils/: __init__.py  bigquery_client.py  config.py  cost_tracking.py  health.py  timing.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_cost_tracking.py  test_health.py  test_job_ops.py  test_place_ops.py  test_query_ops.py  test_timing.py
