[tool.poetry]
name = "serper-tap"
version = "0.1.0"
description = "Production-grade web scraping pipeline for Serper.dev place data with BigQuery queue architecture"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

# Exclude development and example code from built artifacts
exclude = [
    "examples/",
    "scripts/dev/",
]

[tool.poetry.dependencies]
python = "~3.11"
prefect = "^2.14"
google-cloud-bigquery = "^3.13"
httpx = "^0.25"
pydantic = "^2.4"
pydantic-settings = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
# Linting and formatting tools
# Install with: poetry add --group dev pre-commit ruff black mypy
pre-commit = "^3.5"
ruff = "^0.1"
black = "^23.11"
mypy = "^1.7"

[tool.poetry.scripts]
serper-create-job = "src.cli:create_job_cli"
serper-process-batches = "src.cli:process_batches_cli"
serper-monitor-job = "src.cli:monitor_job_cli"
serper-health-check = "src.cli:health_check_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==============================================================================
# TOOLING CONFIGURATION
# ==============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv",
    "examples/",
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | dist
  | build
  | __pycache__
  | examples
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "examples/",
    "scripts/dev/",
]
